alignment fixing

--- a/personal/styles/styles.css
+++ b/personal/styles/styles.css
@@ -19,8 +19,8 @@
 }
 .review-grid {
     display: grid;
-    grid-template-columns: 1fr 400px 400px 400px 1fr;
-    grid-template-rows: 100px 300px 300px;
+    grid-template-columns: 1fr 450px 450px 450px 1fr;
+    grid-template-rows: 100px 350px 350px;
 }
 .grid-footer {
     background-color: #ebe3e3;
@@ -377,7 +377,6 @@ img {
 .comp1-card{
     size: 150px;
     padding: 35px;
-    border-radius: 25%;
     margin: 50px;
     background-color: white;
     grid-column: 2;
@@ -395,7 +394,6 @@ img {
 .comp2-card{
     size: 150px;
     padding: 35px;
-    border-radius: 25%;
     margin: 50px;
     background-color: white;
     grid-column: 3;
@@ -413,7 +411,6 @@ img {
 .comp3-card{
     size: 150px;
     padding: 35px;
-    border-radius: 25%;
     margin: 50px;
     background-color: white;
     grid-column: 4;
@@ -431,7 +428,6 @@ img {
 .comp4-card{
     size: 150px;
     padding: 35px;
-    border-radius: 25%;
     margin: 50px;
     background-color: white;
     grid-column: 2;
@@ -449,7 +445,6 @@ img {
 .comp5-card{
     size: 150px;
     padding: 35px;
-    border-radius: 25%;
     margin: 50px;
     background-color: white;
     grid-column: 3;
@@ -467,7 +462,6 @@ img {
 .comp6-card{
     size: 150px;
     padding: 35px;
-    border-radius: 25%;
     margin: 50px;
     background-color: white;
     grid-column: 4;
